PASSING WITH FORMATING ISSUES
BUILD: PASSING
BUGS: Cali and IDN intro pages not aligned on larger screens;
Kenya Page large text formart issue;

--- a/src/assets/stylesheets/CountryPages/KenyaPage.css
+++ b/src/assets/stylesheets/CountryPages/KenyaPage.css
@@ -2,3 +2,64 @@
     font-family: "Grotesk";
     src: url("../../fonts/Grotesk/Grotesk.otf");
   }
+
+  @font-face {
+    font-family: "Lack";
+    src: url("../../fonts/Lack/Lack-Regular.otf");
+  }
+
+  @font-face {
+    font-family: "Commissioner";
+    src: url("../../fonts/Commissioner/Commissioner-BoldItalic.otf");
+  }
+
+  .html .body{width: 100%; height: 100%; overflow: scroll;}
+  
+#inner{
+  display: table;
+  margin: 100px auto;
+}
+
+  #title {
+    font-size: 5em;
+    font-family: "Grotesk";
+  }
+
+  #heading{
+    font-size: 2em;
+    font-family: "Commissioner";
+
+    margin-top: 5%;
+  }
+
+  #paragraph{
+    width: 50%;
+    font-family: "Lack";
+    font-size: 1.3em;
+  }
+  
+  #outer {
+    color: white;
+    width:100%
+  }
+
+
+
+
+  #style-2::-webkit-scrollbar-track
+{
+	border-radius: 10px;
+	background-color: transparent;
+}
+
+#style-2::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: transparent;
+}
+
+#style-2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #fff;
+}
